<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ok">Okay</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="reset_paranoid">Candy</string>
    <string name="reset_android">Android</string>
    <string name="system_category">System</string>
    <string name="quicksettings_category">Quicksettings</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="statusbar_category">Statusbar</string>
    <string name="navigation_category">Navigation</string>
    <string name="weather_cat_lockscreen">Lockscreen</string>
    <string name="button_settings">Button settings</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="statusbar_notifications_category">Notifications</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="recents_category">Recents</string>
    <string name="candycane_summary_title">Add some sweetener</string>
    <string name="candycane_dialog_title">Coming Soon!!</string>
    <string name="candycane_dialog_message">Under Construction</string>
    <string name="candycane_dialog_toast">READ!</string>
    <string name="immersive_recents_title">Immersive recents</string>
    <string name="immersive_recents_summary">Change the view of the recents screen</string>
    <string name="immersive_recents_dialog_title">Select recents view</string>
    <string name="immersive_recents_default">Default</string>
    <string name="immersive_recents_fullscreen">Fullscreen</string>
    <string name="immersive_recents_statusbar">Statusbar only</string>
    <string name="immersive_recents_navbar">Navbar only</string>
    <string name="powermenu_category">Power menu</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_screenrecord">Screen recorder</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock down</string>
    <string name="powermenu_soundpanel">Sound panel</string>
    <string name="powermenu_dialog_dim">Percent to dim dialog</string>
    <string name="power_menu_animation_title">Power menu animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="power_menu_animation_aosp">AOSP (default)</string>
    <string name="power_menu_animation_bottom">Bottom</string>
    <string name="power_menu_animation_top">Top</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">Include options in the power menu for rebooting into recovery and bootloader</string>
    <string name="advanced_reboot_dialog_title">Advanced reboot menu</string>
    <string name="advanced_reboot_disabled">Disable</string>
    <string name="advanced_reboot_hide_on_keyguard">Hide on lockscreen</string>
    <string name="advanced_reboot_show_always">Show always</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="home_button_wake_title">Home button wake</string>
    <string name="home_button_wake_summary">Pressing the home button will wake your device</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_hidden">Hidden</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="quicksettings_tiles_category">Animations</string>
    <string name="animation_settings_summary">Set custom styles for system animations</string>
    <string name="system_animation_tab">System</string>
    <string name="toast_animation_tab">Toast</string>
    <string name="listview_animation_tab">Listview</string>
    <string name="power_menu_animation_tab">Power menu</string>
    <string name="qs_animation_tab">Quick Settings</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="quick_pulldown_title">Quickpulldown</string>
    <string name="quick_pulldown_summary">%1$s edge of the statusbar pulls down quicksettings</string>
    <string name="quick_pulldown_summary_always">Always show quicksettings on statusbar pulldown</string>
    <string name="quick_pulldown_off">Off</string>
    <string name="quick_pulldown_left">Left</string>
    <string name="quick_pulldown_right">Right</string>
    <string name="quick_pulldown_always">Always</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Statusbar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500ms</string>
    <string name="show_network_traffic_1000">1000ms</string>
    <string name="show_network_traffic_1500">1500ms</string>
    <string name="show_network_traffic_2000">2000ms</string>
    <string name="network_traffic_autohide">Autohide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the arrows in the traffic indicators</string>
    <string name="qs_advanced_data_title">Advanced data tile</string>
    <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
    <string name="qs_wifi_easy_toggle_title">Advanced WiFi toggle</string>
    <string name="qs_wifi_easy_toggle_summary">Makes it so one click will turn WiFi on or off instead of taking you to settings</string>
    <string name="bt_easy_toggle_title">Advanced bluetooth toggle</string>
    <string name="bt_easy_toggle_summary">One tap action to toggle bluetooth</string>
    <string name="qstiles_layout_summary">Configure the layout of the tiles panel (number of rows and columns).</string>
    <string name="qstiles_layout_title">QS tiles layout</string>
    <string name="qstiles_category_title">QS TILES</string>
    <string name="qs_header_category">QS header options</string>
    <string name="status_bar_custom_header_title">Custom header image</string>
    <string name="lockscreen_targets_title">Bottom L/R shortcuts</string>
    <string name="lock_clock_font_title">Lockscreen clock font</string>
    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
    <string name="carrier_label_settings_title">Carrier label</string>
    <string name="tap_to_sleep_category">Tap to sleep</string>
    <string name="tap_to_sleep_lockscreen_category">Tap to sleep on lockscreen</string>
    <string name="status_bar_battery_style_category">Battery</string>
    <string name="lockscreen_battery_category">Lockscreen battery</string>
    <string name="statusbar_weather_title">Statusbar weather</string>
    <string name="statusbar_weather_dialog_title">Statusbar weather style</string>
</resources>