<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceScreen
        android:key="statusbarclock"
        android:fragment="org.candyroms.candycane.fragments.StatusBarClock"
        android:title="@string/status_bar_clock_title" />

    <PreferenceScreen
        android:key="status_bar_battery_style"
        android:title="@string/status_bar_battery_style_category"
        android:fragment="org.candyroms.candycane.fragments.StatusbarBatteryStyle" />

        <ListPreference
            android:key="status_bar_weather"
            android:title="@string/statusbar_weather_title"
            android:dialogTitle="@string/statusbar_weather_dialog_title"
            android:entries="@array/status_bar_weather_entries"
            android:entryValues="@array/status_bar_weather_values" />

    <PreferenceScreen
        android:key="quicksettings"
        android:fragment="org.candyroms.candycane.fragments.QuickSettings"
        android:title="@string/quicksettings_category" />

     <PreferenceScreen
        android:key="traffic"
        android:fragment="org.candyroms.candycane.fragments.Traffic"
        android:title="@string/traffic_category" />

     <PreferenceScreen
        android:key="systemui_tuner_statusbar"
        android:title="@string/statusbar_items_category" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.TunerActivity" />
     </PreferenceScreen>

     <PreferenceScreen
        android:key="statusbar_notifications"
        android:fragment="org.candyroms.candycane.fragments.StatusbarNotifications"
        android:title="@string/statusbar_notifications_category" />

     <PreferenceScreen
        android:key="carrier_label_settings"
        android:fragment="org.candyroms.candycane.fragments.CarrierLabelSettings"
        android:title="@string/carrier_label_settings_title" />

     <PreferenceScreen
        android:key="tap_to_sleep"
        android:fragment="org.candyroms.candycane.fragments.TaptoSleep"
        android:title="@string/tap_to_sleep_category" />

</PreferenceScreen>
