<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Candy Roms

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/lockscreen_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceScreen
         android:title="@string/lockscreen_targets_title" >
         <intent
             android:targetPackage="com.android.systemui"
             android:targetClass="com.android.systemui.candy.LockscreenShortcutsActivity" />
    </PreferenceScreen>

     <PreferenceScreen
            android:key="lockscreen_weather"
            android:title="@string/lockscreen_weather_title"
            android:fragment="org.candyroms.candycane.fragments.LockScreenWeatherSettings" />

     <ListPreference
            android:key="lock_clock_fonts"
            android:title="@string/lock_clock_font_title"
            android:dialogTitle="@string/lock_clock_font_title"
            android:entries="@array/lock_clock_fonts_entries"
            android:entryValues="@array/lock_clock_fonts_values"
            android:summary="@string/lock_clock_font_summary"
            android:persistent="false" />

     <PreferenceScreen
            android:key="tap_to_sleep_lockscreen"
            android:title="@string/tap_to_sleep_lockscreen_category"
            android:fragment="org.candyroms.candycane.fragments.TaptosleepLockscreen" />

     <PreferenceScreen
            android:key="lockscreen_battery"
            android:title="@string/lockscreen_battery_category"
            android:fragment="org.candyroms.candycane.fragments.LockScreenBattery" />

</PreferenceScreen>
